<resources>
    <string name="app_name">MovieSearch</string>
    <string name="list_title">Movies list</string>
    <string name="start_second">Start Second</string>
    <string name="first_film_title">Avengers: \nEnd Game</string>
    <string name="first_film_genre">Action, Adventure, Fantasy</string>
    <string name="first_film_reviews">125 reviews</string>
    <string name="first_film_storyline">Storyline</string>
    <string name="first_film_text">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos` actions and restore balance to the universe.</string>
    <string name="first_film_cast">Cast</string>
    <string name="first_film_actor1">Robert Downey Jr.</string>
    <string name="first_film_actor2">Chris Evans</string>
    <string name="first_film_actor3">Mark Ruffalo</string>
    <string name="first_film_actor4">Chris Hemsworth</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>