<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".MoviesDetails"
>
    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline_start"
            app:layout_constraintGuide_begin="16dp"
            android:orientation="vertical"
    />
    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline_end"
            app:layout_constraintGuide_end="16dp"
            android:orientation="vertical"
    />
    <ImageView
            android:id="@+id/image_hero"
            android:layout_width="530dp"
            android:layout_height="298dp"
            android:layout_marginStart="-30dp"
            app:srcCompat="@drawable/hero"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
    />
    <TextView
            android:id="@+id/tv_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="226dp"
            android:text="@string/age"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tv_title"
            app:layout_constraintHorizontal_bias="0"
    />
    <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/first_film_title"
            android:textColor="@color/light"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintWidth_default="spread"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintTop_toBottomOf="@id/tv_age"
            app:layout_constraintBottom_toTopOf="@id/tv_genre"
            app:layout_constraintHorizontal_bias="0"
    />
    <TextView
            android:id="@+id/tv_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_film_genre"
            android:textColor="@color/red"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintBottom_toTopOf="@id/image_rating"
            app:layout_constraintHorizontal_bias="0"
    />
    <ImageView
            android:id="@+id/image_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:srcCompat="@drawable/ic_star_icon_red"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintEnd_toStartOf="@id/tv_reviews"
            app:layout_constraintTop_toBottomOf="@id/tv_genre"
            app:layout_constraintHorizontal_bias="0"
    />
    <TextView
            android:id="@+id/tv_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/first_film_reviews"
            android:textColor="@color/gray"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/image_rating"
            app:layout_constraintEnd_toEndOf="@+id/guideline_end"
            app:layout_constraintBaseline_toBottomOf="@id/image_rating"
            app:layout_constraintBottom_toTopOf="@id/tv_storyline"
            app:layout_constraintHorizontal_bias="0"
    />
    <TextView
            android:id="@+id/tv_storyline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/first_film_storyline"
            android:textColor="@color/light"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/guideline_start"
            app:layout_constraintEnd_toEndOf="@+id/guideline_end"
            app:layout_constraintTop_toBottomOf="@id/tv_reviews"
            app:layout_constraintBottom_toTopOf="@id/tv_text"
            app:layout_constraintHorizontal_bias="0"
    />
    <TextView
            android:id="@+id/tv_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/first_film_text"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:lineSpacingExtra="4sp"
            app:layout_constraintWidth_default="spread"
            app:layout_constraintStart_toEndOf="@+id/guideline_start"
            app:layout_constraintEnd_toEndOf="@+id/guideline_end"
            app:layout_constraintTop_toBottomOf="@id/tv_storyline"
            app:layout_constraintBottom_toTopOf="@id/tv_cast"
            app:layout_constraintHorizontal_bias="0"
    />
    <TextView
            android:id="@+id/tv_cast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/first_film_cast"
            android:textColor="@color/light"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/guideline_start"
            app:layout_constraintEnd_toEndOf="@+id/guideline_end"
            app:layout_constraintTop_toBottomOf="@id/tv_text"
            app:layout_constraintBottom_toTopOf="@id/actor_list"
            app:layout_constraintHorizontal_bias="0"
    />
    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/actor_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:listitem="@layout/view_holder_actor"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            app:layout_constraintStart_toEndOf="@+id/guideline_start"
            app:layout_constraintEnd_toEndOf="@+id/guideline_end"
            app:layout_constraintTop_toBottomOf="@id/tv_cast"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0"
    />
</androidx.constraintlayout.widget.ConstraintLayout>